--- a/Frontend/.env
+++ b/Frontend/.env
@@ -3,3 +3,5 @@ VITE_API_URL=http://localhost:5001
 VITE_SHOTX_CONTRACT_ADDRESS=0xe256884B1eBC08d4130B543d91001437B1FD5e1F
 VITE_SHOTX_ITEMS_ADDRESS=0x1e62C9262f5783de42A3070cDa158a372dea6A3B
 VITE_MARKETPLACE_ADDRESS=0xE3BC639099D9Aef6360653f44e0B04737251e1E0
+
+VITE_ADMIN_WALLET=0x5015689ed3d89b65164ef832fa1e4d2c58cf7d73
